# EGO

./: .gitmodules  LICENSE  README.md
arms_inv_kin/: CMakeLists.txt  package.xml
arms_inv_kin/config/: select_link.yaml
arms_inv_kin/include/arms_inv_kin/: inv_kin.h  inv_kin_gravity_comp.h
arms_inv_kin/src/: inv_kin.cpp  inv_kin_gravity_comp.cpp  main_inv_kin.cpp  main_inv_kin_gravity_comp.cpp
ego_description/: CMakeLists.txt  package.xml
ego_description/config/: urdf_cam.rviz
ego_description/launch/: display.launch
ego_description/urdf/: ego_robot.urdf  ego_robot.urdf.xacro
qb_frank_controller/: CMakeLists.txt  package.xml
qb_frank_controller/include/qb_frank_controller/: imuboard_communications.h  qbmove_communications.h
qb_frank_controller/launch/: arms_manager.launch  arms_manager_inv_kin.launch  left_arm.launch  right_arm.launch
qb_frank_controller/src/: imuboard_communications.cpp  qb_manager_node.cpp  qbmove_communications.cpp
qb_interface_node/: CMakeLists.txt  README.md  package.xml
qb_interface_node/conf/: config.yaml  config_imu.yaml
qb_interface_node/include/: commands.h  definitions.h  imuboard_commands.h  qbCube.h  qbHand.h  qbImuBoard.h  qbInterface.h  qb_class.h  qb_class_imu.h  qbmove_communications.h
qb_interface_node/launch/: qb_interface.launch  qb_interface_imu.launch
qb_interface_node/msg/: cubeCurrent.msg  cubePos.msg  handCurrent.msg  handRef.msg  inertialSensor.msg  inertialSensorArray.msg  quaternion.msg  quaternionArray.msg  temperature.msg  temperatureArray.msg
qb_interface_node/src/: imuboard_communications.cpp  main.cpp  main_imu.cpp  qbCube.cpp  qbHand.cpp  qbImuBoard.cpp  qbInterface.cpp  qbInterface.tpp  qb_class.cpp  qb_class_imu.cpp  qbmove_communications.cpp
qb_interface_node/srv/: control_pid.srv  control_pid.srv~
segway_base_controller/: CMakeLists.txt  Read_me  package.xml
segway_base_controller/include/segway/: Sensor.h  lqr.h
segway_base_controller/launch/: lqr_controller.launch  sensor.launch
segway_base_controller/src/: Sensor.cpp  lqr.cpp  main_lqr.cpp  main_odometry_publisher.cpp  main_pitch_loop.cpp  main_sensor.cpp
zed-oculus/: CMakeCache.txt  CMakeLists.txt
zed-oculus/include/: stdafx.h
zed-oculus/ros_lib/lwr_controllers/: ArmState.h  CartesianImpedancePoint.h  MultiPriorityTask.h  PoseRPY.h  RPY.h  SetCartesianImpedanceCommand.h  Stiffness.h
zed-oculus/ros_lib/qb_interface/: cubeCurrent.h  cubeEq_Preset.h  cubePos.h  cubeRef.h  handCurrent.h  handPos.h  handRef.h  inertialSensor.h  inertialSensorArray.h
zed-oculus/ros_lib/ros/: node_handle.h
zed-oculus/ros_lib/ros_myo/: EmgArray.h  MyoArm.h  Vib2.h
zed-oculus/ros_lib/rosserial_msgs/: Log.h
zed-oculus/src/: main.cpp  stdafx.cpp
zed_oculus_qb_bridge/: CMakeLists.txt  Readme  package.xml
zed_oculus_qb_bridge/config/: conf_oculus_joy.yaml
zed_oculus_qb_bridge/include/zed_oculus_qb_bridge/: Joy_oculus_bridge.h
zed_oculus_qb_bridge/include/zed_oculus_qb_bridge/udp_interface/: udp_client.h  udp_server.h
zed_oculus_qb_bridge/launch/: oculus_joy_bridge.launch
zed_oculus_qb_bridge/src/: Joy_oculus_bridge.cpp  main_Joy_bridge.cpp  main_head_bridge.cpp  video_stream.cpp
zed_oculus_qb_bridge/src/udp_interface/: udp_client.cpp  udp_server.cpp
