<?xml version="1.0"?>
<package>
  <name>arms_inv_kin</name>
  <version>0.0.0</version>
  <description>This package contains the ROS node to perform the inverse kinematics of Alter-Ego arms</description>
  
  <maintainer email="g.lentini88@gmail.com">Gianluca Lentini</maintainer>
  <maintainer email="michele.maimeri@iit.it">Michele Maimeri</maintainer>
  <maintainer email="gr.zambella@gmail.com">Grazia Zambella</maintainer>

  <license>BSD 3-Clause License</license>
  <author>NMMI</author>
  <author>Istituto Italiano di Tecnologia, Soft Robotics for Human Cooperation and Rehabilitation Lab</author>
  <author>Centro di Ricerca E. Piaggio</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>ros_myo</build_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>ros_myo</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
