<?xml version="1.0"?>
<package>
  <name>segway_base_controller</name>
  <version>0.0.0</version>
  <description>The segway package</description>

  <maintainer email="g.lentini88@gmail.com">Gianluca Lentini</maintainer>
  <maintainer email="michele.maimeri@iit.it">Michele Maimeri</maintainer>
  <maintainer email="gr.zambella@gmail.com">Grazia Zambella</maintainer>

  <license>BSD 3-Clause License</license>
  <author>NMMI</author>
  <author>Istituto Italiano di Tecnologia, Soft Robotics for Human Cooperation and Rehabilitation Lab</author>
  <author>Centro di Ricerca E. Piaggio</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qb_interface</build_depend>
  <build_depend>phidgets_interface_kit</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>qb_interface</run_depend>
  <run_depend>phidgets_interface_kit</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>kdl_conversions</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
