<?xml version="1.0"?>
<package>
  <name>zed_oculus_qb_bridge</name>
  <version>0.0.0</version>
  <description>The zed_oculus_qb_bridge package</description>

  <maintainer email="g.lentini88@gmail.com">Gianluca Lentini</maintainer>
  <maintainer email="michele.maimeri@iit.it">Michele Maimeri</maintainer>
  <maintainer email="gr.zambella@gmail.com">Grazia Zambella</maintainer>

  <license>BSD 3-Clause License</license>
  <author>NMMI</author>
  <author>Istituto Italiano di Tecnologia, Soft Robotics for Human Cooperation and Rehabilitation Lab</author>
  <author>Centro di Ricerca E. Piaggio</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rosserial_server</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosserial_server</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
